[gd_scene load_steps=3 format=3 uid="uid://bvxyz8w9j1klm"]

[ext_resource type="PackedScene" path="res://src/scenes/ui/menus/settings_menu.tscn" id="1_demo1"]
[ext_resource type="Script" path="res://src/scripts/demo/settings_menu_demo.gd" id="2_demo2"]

[node name="SettingsMenuDemo" type="Node"]
script = ExtResource("2_demo2")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.4, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings Menu Demo"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Press SPACE to open settings menu"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings Menu: Closed"
horizontal_alignment = 1

[node name="SettingsMenu" parent="." instance=ExtResource("1_demo1")]